QVariant: make sure two floating points compare equal if they are equal

Not just fuzzily equal. The fuzzy comparison fails for infinities, since
the expression p1 - p2 where p1 = p2 = infinity is NaN. And NaN
comparisons are always false.

As a nice side-effect, we don't do the more expensive computation of a
multiplication if the two numbers really are equal.

Task-number: QTBUG-50036
Change-Id: I11f559ef75544c50b3f8ffff1420cec7c7273295
Reviewed-by: Olivier Goffart (Woboq GmbH) <ogoffart@woboq.com>

cregit: ac2bde9caf41764eacca4f9ece1b724dc924babf https://github.com/qt/qtbase/commit/ac2bde9caf41764eacca4f9ece1b724dc924babf